force-app/main/default/objects/Flow_Documentation__c/Flow_Documentation__c.object-meta.xml
<CustomObject>
    <label>Flow Documentation</label>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>Flow Documentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Documentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>