force-app/main/default/objects/Flow_Documentation__c/fields/Actions_Performed__c.field-meta.xml
<CustomField>
    <fullName>Actions_Performed__c</fullName>
    <label>Actions Performed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>