force-app/main/default/objects/Flow_Documentation__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flow</label>
    <referenceTo>FlowRecord</referenceTo>
    <relationshipLabel>Flow Documentation</relationshipLabel>
    <relationshipName>Flow_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>