force-app/main/default/objects/Flow_Documentation__c/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
            <value>
                <fullName>Record-Triggered Flow</fullName>
            </value>
            <value>
                <fullName>Scheduled Flow</fullName>
            </value>
            <value>
                <fullName>Auto-Launched Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>