force-app/main/default/objects/Flow_Documentation__c/fields/Purpose_Description__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Description__c</fullName>
    <label>Purpose/Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>