force-app/main/default/objects/Flow_Documentation__c/fields/Trigger_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Criteria__c</fullName>
    <label>Trigger Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>