force-app/main/default/objects/Flow_Documentation__c/fields/Triggering_Object__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Object__c</fullName>
    <label>Triggering Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Caregiver Transaction</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Check Log</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Document Checklist Item</fullName>
            </value>
            <value>
                <fullName>Duplicate Record Set</fullName>
            </value>
            <value>
                <fullName>General Note</fullName>
            </value>
            <value>
                <fullName>Historical Transaction</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Remainder Person</fullName>
            </value>
            <value>
                <fullName>Service Enrollment</fullName>
            </value>
            <value>
                <fullName>Time Entry</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Trust Accounting</fullName>
            </value>
            <value>
                <fullName>Trust Asset</fullName>
            </value>
            <value>
                <fullName>Trust Coordinator Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>