force-app/main/default/objects/Flow_Documentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flow__c</columns>
    <columns>Flow_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Triggering_Object__c</columns>
    <columns>Purpose_Description__c</columns>
    <columns>Trigger_Criteria__c</columns>
    <columns>Actions_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>